css: fix image overflow on mobile phones

--- a/css/default.css
+++ b/css/default.css
@@ -109,6 +109,7 @@ article img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 100%;
 }
 
 article table {
